Fix T44389: Tooltips swapped in Logic Editor